# ternary-stack

./: .llm-index.md  LLM_CORRECTIONS.md  PROMPTS.md  README.md  TODO.md  remove_nested_git.sh
T81WM/: README.md
T81WM-core/: README.md
alexis-linux/alexis-linux/: Axion.cweb  Axion.ko  README.md  TritJS-CISA-Optimized.c  TritJS-CISA-Optimized.cweb  TritJS-CISA-Optimized.py  TritJS-CISA.c  TritJS-CISA.cweb  TritJS.cweb  TritJSCalc-2.0.cweb  TritJSCalc.java  TritJSUseCase.scenerios  TritJSncurses.cweb  alexis-journey.cweb  axion.ebuild  helloWorld.tbin  secure_state_check.lua  t81benchmark.c  t81benchmark2.c  ternary-gentoo.cweb  ternary-systems-B02-RS.cweb  ternary-systems-B02_py.cweb  ternary_system_A01.cweb  ternary_system_A03a.cweb  ternary_system_B02.cweb  ternary_system_a02.c  ternary_systems.cweb.txt  ternary_systems.rs  ternary_systems_A03.cweb  ternary_systems_B02-JA.cweb  triAlpha.nfo  tritjs-2.0.ebuild  tritjs_calculator_enhanced.cweb  tritsys.c
docs/: ROADMAP.md  architecture.md  build-system.md  cweb-format.md  entropy-model.md  faq.md  index.md  lookingglass-schema.md  schema.md  symbolic-logic.md  t81lang-spec.md  ternary-recursion-and-logic.md  test-strategy.md
hanoivm/: .cwebpkg.md  AI_METADATA.md  AXION_BLACKBOX.md  AXION_PACKAGE_FORMAT.md  Author.md  AxionCWEB.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  CWEB_STYLE_GUIDE.md  DATA_TYPES.md  FILESYSTEM.md  GLOSSARY.md  HanoiVM_Opcode_Profiling.csv  HanoiVM_Runtime_Timeline.csv  INTEGRATION.md  LICENSE  LLVM_GUIDE.md  MANIFESTO.md  MODULE.bazel  README.cweb  README.md  ROADMAP.md  Readme  SECURITY.md  STATUS.md  SYMBOL_TAGS.md  T243_T729.md  T81LANG.md  T81Lang.md  T81_IR_SPEC.md  TECHTREE.md  Ternary_Acceleration_Simulation.csv  VM_Benchmark_Comparison.csv  axion-install.sh  base_adaptor.cweb  build-all.cweb  ci.yml  config.cweb  emit_hvm.cweb  (+12 more)
hanoivm/docs/: TODO.md
hanoivm/src/: TODO.md
lillyshea/: README.md
lillyshea.org/: README.md  index.html
lillyshea.org/assets/fonts/SheaSans/: FONTREADME.md
lillyshea.org/scripts/: hero-animatino.js  scroll-effects.js  tritjs.js
lillyshea.org/styles/: features.css  hero.css  main.css
pirates/: README.md  night_shift.sh  pirates.py  pirates.rs  pirates.t81  ternary_system.txt
riftcat/: riftcat.java  riftcatEnhanced
t81lang/: TODO.md
t81lang/examples/: hello_world.cweb  test.t81
t81lang/src/: t81_compile.py
ternary/: README.md  TernRSA.c  base_adapter.cweb  reticulated.cweb  reticulated.py  t81.cweb  t81_core.py  t81base.rs  t81bases.cpp  terlib2.cweb  ternary-tools.cweb  ternary.cweb  ternary.rs  ternery-tools-1.5-RS.cweb  tritsys-0.0.1.c  tritsys-1.0.c  tritsys-evo.c  tritsys.c  ttypes-a02.cweb  ttypes-alpha-02.cweb  ttypes.c  ttypes.cu  ttypes.h  ttypesEnh.cweb  ttypes_.cweb  ttypes_cutlass.cu
